--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <tableschema-java-version>0.1.5</tableschema-java-version>
+        <tableschema-java.version>0.1.5-gbif-SNAPSHOT</tableschema-java.version>
         <hamcrest.version>1.3</hamcrest.version>
         <junit.version>5.7.2</junit.version>
         <slf4j-simple.version>1.7.32</slf4j-simple.version>
@@ -189,18 +189,19 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>6.0.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!-- Comment temporarily -->
+<!--            <plugin>-->
+<!--                <groupId>org.owasp</groupId>-->
+<!--                <artifactId>dependency-check-maven</artifactId>-->
+<!--                <version>6.0.1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
         <resources>
             <resource>
@@ -259,9 +260,9 @@
 
         <!-- tableschema-java -->
         <dependency>
-            <groupId>com.github.frictionlessdata</groupId>
+            <groupId>io.frictionlessdata</groupId>
             <artifactId>tableschema-java</artifactId>
-            <version>${tableschema-java-version}</version>
+            <version>${tableschema-java.version}</version>
         </dependency>
     </dependencies>
 </project>
