--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 
     <repositories>
         <repository>
+            <id>gbif-all</id>
+            <url>https://repository.gbif.org/content/groups/gbif</url>
+        </repository>
+        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
