--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.frictionlessdata</groupId>
     <artifactId>datapackage-java</artifactId>
-    <version>0.6.17-gbif-SNAPSHOT</version>
+    <version>0.6.16.1-gbif-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <issueManagement>
@@ -35,7 +35,7 @@
         <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <tableschema-java-version>0.6.16-gbif</tableschema-java-version>
+        <tableschema-java-version>0.6.16.1-gbif-SNAPSHOT</tableschema-java-version>
         <hamcrest.version>1.3</hamcrest.version>
         <junit.version>5.9.2</junit.version>
         <slf4j-simple.version>2.0.5</slf4j-simple.version>
